syntax = "proto3";

package pb;

option go_package="./pb";

service TaskService {
  rpc SendTask (TaskRequest) returns (TaskResponse);
}

message TaskRequest {
  int32 type = 1;
  int32 value = 2;
  int32 Id = 3;
}

message TaskResponse {
  string status = 1;
}